upgrade: 升级相关组件版本